<resources>
    <string name="appName">Matter</string>
    <string name="all">All</string>
    <string name="subreddits">Subreddits</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="submission_image">Submission image</string>
    <string name="upvote">Upvote</string>
    <string name="downvote">Downvote</string>
    <string name="comments">Comments</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log in</string>
    <string name="authentication_issue">There was an issue authenticating. Check your Reddit account for possible problems and try again.</string>
    <string name="front_page">Front Page</string>
    <string name="confirm_log_out">Are you sure you want to log out?</string>
    <string name="new_user">New user</string>
    <string name="accounts">Accounts</string>

    <!-- Reddit templates -->
    <string name="subreddit_qualifier">/r/%s</string>
    <string name="username_qualifier">/u/%s</string>

    <!-- Placeholders -->
    <string name="placeholder_username">/u/PiwwowPants</string>
    <string name="placeholder_submission_post_time">6h</string>
    <string name="placeholder_submission_type">i.redd.it</string>
    <string name="placeholder_submission_title">Welcome to Matter for Reddit</string>
    <string name="placeholder_submission_subreddit">/r/cats</string>
    <string name="placeholder_submission_tag">Developer</string>
    <string name="placeholder_submission_vote_count">593</string>
    <string name="placeholder_submission_comment_count">31</string>
    <string name="placeholder_subreddit_no_qualifier">lifeisstrange</string>

    <!-- Other -->
    <string name="separator">Separator</string>
</resources>
