<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/log_in_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accounts"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/log_in_spinner"
        android:layout_width="match_parent"
        android:minWidth="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/log_in_title"
        app:layout_constraintBottom_toTopOf="@id/log_in_button_bar"
        android:layout_margin="16dp" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/log_in_button_bar"
        android:layout_width="match_parent"
        android:minWidth="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/log_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:background="@android:color/transparent"
            android:padding="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/new_user_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/new_user"
            app:layout_constraintLeft_toLeftOf="parent"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>