<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/submission_layout_actions"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/submission_layout_voting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/submission_layout_comments"
        android:layout_margin="8dp">

        <ImageButton
            android:id="@+id/submission_upvote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_upward_24dp"
            android:contentDescription="@string/upvote"
            app:layout_constraintRight_toLeftOf="@id/submission_vote_count"
            app:layout_constraintLeft_toLeftOf="parent"
            android:padding="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone" />

        <TextView
            android:id="@+id/submission_vote_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/placeholder_submission_vote_count"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="4dp"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageButton
            android:id="@+id/submission_downvote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintLeft_toRightOf="@id/submission_vote_count"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/ic_arrow_downward_24dp"
            android:contentDescription="@string/downvote"
            android:padding="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/submission_layout_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/submission_layout_voting"
        app:layout_constraintRight_toLeftOf="@id/submission_layout_share"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/submission_comment_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_forum_24dp"
            android:contentDescription="@string/comments"
            app:layout_constraintRight_toLeftOf="@id/submission_comment_count"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/submission_comment_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/submission_comment_icon"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/placeholder_submission_comment_count"
            android:layout_margin="4dp"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/submission_layout_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/submission_layout_comments"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/submission_share_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share_24dp"
            android:contentDescription="@string/share"
            app:layout_constraintRight_toLeftOf="@id/submission_share_text"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/submission_share_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/submission_share_icon"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/share"
            android:layout_margin="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>