<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/submission_layout_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/submission_card_view_size"
    android:layout_margin="8dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/submission_layout_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/submission_title"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <TextView
            android:id="@+id/submission_subreddit"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/submission_subreddit_separator"
            android:layout_margin="4dp"
            android:text="@string/placeholder_submission_subreddit" />

        <include
            android:id="@+id/submission_subreddit_separator"
            layout="@layout/dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/submission_subreddit"
            app:layout_constraintRight_toLeftOf="@id/submission_tag"
            android:layout_margin="4dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/submission_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/submission_subreddit_separator"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/placeholder_submission_tag"
            android:textSize="14sp"
            android:layout_margin="4dp"
            android:visibility="gone"
            android:textColor="@color/colorAccent" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/submission_title"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_submission_title"
        app:layout_constraintTop_toBottomOf="@id/submission_layout_source"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/submission_image_card_view"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="20sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/submission_image_card_view"
        android:layout_width="@dimen/submission_card_view_size"
        android:layout_height="@dimen/submission_card_view_size"
        app:cardCornerRadius="8dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:cardElevation="0dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/submission_thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/submission_card_view_size"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_broken_image_24dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:contentDescription="@string/submission_image" />
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>