<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/profile_profile_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/profile_profile_separator"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/profile_image_size"
            android:layout_height="@dimen/profile_image_size"
            android:src="@drawable/ic_person_24dp"
            android:scaleType="fitCenter"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/profile_username"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/username"
            android:layout_margin="4dp" />

        <TextView
            android:id="@+id/profile_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_username"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/profile_image"
            android:layout_margin="4dp" />
    </android.support.constraint.ConstraintLayout>

    <include
        layout="@layout/horizontal_line"
        android:id="@+id/profile_profile_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="4dp"
        app:layout_constraintTop_toBottomOf="@id/profile_profile_layout"
        app:layout_constraintBottom_toTopOf="@id/profile_options_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/profile_options_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_profile_separator"
        android:layout_margin="8dp"
        android:paddingTop="8dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/profile_settings_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/profile_logout_layout"
            app:layout_constraintLeft_toLeftOf="parent">

            <ImageView
                android:id="@+id/profile_settings_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_settings_24dp"
                app:layout_constraintRight_toLeftOf="@id/profile_settings"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:contentDescription="@string/settings"
                android:layout_margin="4dp" />

            <TextView
                android:id="@+id/profile_settings"
                app:layout_constraintLeft_toRightOf="@id/profile_settings_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="14sp"
                android:layout_margin="4dp" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/profile_logout_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <ImageView
                android:id="@+id/profile_logout_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close_24dp"
                app:layout_constraintRight_toLeftOf="@id/profile_logout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:contentDescription="@string/settings"
                android:tint="@color/red_500"
                android:layout_margin="4dp" />

            <TextView
                android:id="@+id/profile_logout"
                app:layout_constraintLeft_toRightOf="@id/profile_logout_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:textSize="14sp"
                android:textColor="@color/red_500"
                android:layout_margin="4dp" />
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>